syntax = "proto3";

package dbservice.user;

import "shared/identifiers.proto";

service UserService {
  rpc getUser(shared.identifiers.UserIdentifier) returns (User);
  rpc getUserPassword(shared.identifiers.UserIdentifier) returns (UserPassword);
  rpc createUser(CreateUserRequest) returns (User);
  rpc updateUser(UpdateUserRequest) returns (User);
  rpc deleteUser(shared.identifiers.UserIdentifier) returns (User);
  rpc linkProject(LinkProjectToUserRequest) returns (User);
}

message User {
  int64 id = 1;
  string email = 2;
  string name = 3;
  UserType type = 4;
}

message UserPassword {
  string password = 1;
}

enum UserType {
  SUPERADMIN = 0;
  ADMIN = 1;
  USER = 2;
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  UserType type = 4;
}

message UserUpdateParams {
  optional string email = 1;
  optional string name = 2;
  optional string password = 3;
  optional UserType type = 4;
}

message UpdateUserRequest {
  shared.identifiers.UserIdentifier userIdentifier = 1;
  UserUpdateParams updateParams = 2;
}

message LinkProjectToUserRequest {
  shared.identifiers.ProjectIdentifier project = 1;
  shared.identifiers.UserIdentifier user = 2;
}
